--- a/wiki/lib/tpl/modified/design.css
+++ b/wiki/lib/tpl/modified/design.css
@@ -10,7 +10,8 @@
 * { padding: 0; margin: 0; }
 
 body {
-  font: 100% "Lucida Grande", Verdana, Lucida, Helvetica, Arial, sans-serif;
+  /*font: 100% "Lucida Grande", Verdana, Lucida, Helvetica, Arial, sans-serif;*/
+  font: 100% Arial, sans-serif;
   background-color: __background__;
   color: __text__;
 }
